devel/R3.14.12.3/support/seq-2-0-12/src/snc/O.linux-x86/y.output
   0  $accept : state_program $end

   1  state_program : program_name definitions state_set_list
   2                | program_name definitions state_set_list global_c
   3                | pp_codes program_name definitions state_set_list
   4                | pp_codes program_name definitions state_set_list global_c
   5                | error

   6  program_name : PROGRAM NAME
   7               | PROGRAM NAME L_PAREN STRING R_PAREN

   8  definitions : defn_stmt
   9              | definitions defn_stmt

  10  defn_stmt : assign_stmt
  11            | monitor_stmt
  12            | decl_stmt
  13            | debug_stmt
  14            | sync_stmt
  15            | syncq_stmt
  16            | option_stmt
  17            | defn_c_stmt
  18            | pp_code
  19            | error

  20  assign_stmt : ASSIGN NAME to STRING SEMI_COLON
  21              | ASSIGN NAME subscript to STRING SEMI_COLON
  22              | ASSIGN NAME to L_BRACKET assign_list R_BRACKET SEMI_COLON

  23  assign_list : STRING
  24              | assign_list COMMA STRING

  25  to :
  26     | TO

  27  monitor_stmt : MONITOR NAME SEMI_COLON
  28               | MONITOR NAME subscript SEMI_COLON

  29  subscript : L_SQ_BRACKET NUMBER R_SQ_BRACKET

  30  debug_stmt : DEBUG_PRINT NUMBER SEMI_COLON

  31  decl_stmt : type NAME SEMI_COLON
  32            | type NAME EQUAL NUMBER SEMI_COLON
  33            | type NAME subscript SEMI_COLON
  34            | type NAME subscript subscript SEMI_COLON
  35            | type ASTERISK NAME SEMI_COLON
  36            | type ASTERISK NAME subscript SEMI_COLON

  37  local_decl_stmt : type NAME SEMI_COLON
  38                  | type NAME EQUAL NUMBER SEMI_COLON

  39  type : CHAR
  40       | SHORT
  41       | INT
  42       | LONG
  43       | UNSIGNED CHAR
  44       | UNSIGNED SHORT
  45       | UNSIGNED INT
  46       | UNSIGNED LONG
  47       | FLOAT
  48       | DOUBLE
  49       | STRING_DECL
  50       | EVFLAG
  51       | error

  52  sync_stmt : SYNC NAME to NAME SEMI_COLON
  53            | SYNC NAME subscript to NAME SEMI_COLON

  54  syncq_stmt : SYNCQ NAME to NAME SEMI_COLON
  55             | SYNCQ NAME subscript to NAME SEMI_COLON
  56             | SYNCQ NAME to NAME NUMBER SEMI_COLON
  57             | SYNCQ NAME subscript to NAME NUMBER SEMI_COLON

  58  defn_c_stmt : escaped_c_list

  59  option_stmt : OPTION PLUS NAME SEMI_COLON
  60              | OPTION MINUS NAME SEMI_COLON

  61  state_set_list : state_set
  62                 | state_set_list state_set

  63  state_set : STATE_SET NAME L_BRACKET state_list R_BRACKET
  64            | ENTRY L_BRACKET stmt_list R_BRACKET
  65            | EXIT L_BRACKET stmt_list R_BRACKET
  66            | pp_code
  67            | error

  68  state_list : state
  69             | state_list state
  70             | error

  71  state : STATE NAME L_BRACKET state_option_list condition_list R_BRACKET
  72        | pp_code
  73        | error

  74  state_option_list :
  75                    | state_option
  76                    | state_option_list state_option
  77                    | error

  78  state_option : OPTION PLUS NAME SEMI_COLON
  79               | OPTION MINUS NAME SEMI_COLON
  80               | error

  81  condition_list : entry_list transition_list exit_list
  82                 | error

  83  entry_list :
  84             | entry
  85             | entry_list entry

  86  exit_list :
  87            | exit
  88            | exit_list exit

  89  entry : ENTRY L_BRACKET stmt_list R_BRACKET
  90        | error

  91  exit : EXIT L_BRACKET stmt_list R_BRACKET
  92       | error

  93  transition_list : transition
  94                  | transition_list transition
  95                  | error

  96  transition : WHEN L_PAREN expr R_PAREN L_BRACKET stmt_list R_BRACKET STATE NAME
  97             | local_decl_stmt
  98             | pp_code
  99             | error

 100  expr : compound_expr
 101       | expr binop expr
 102       | expr asgnop expr
 103       | unop expr
 104       | AUTO_INCR expr
 105       | AUTO_DECR expr
 106       | expr AUTO_INCR
 107       | expr AUTO_DECR
 108       | NUMBER
 109       | CHAR_CONST
 110       | STRING
 111       | NAME
 112       | NAME L_PAREN expr R_PAREN
 113       | EXIT L_PAREN expr R_PAREN
 114       | L_PAREN expr R_PAREN
 115       | expr bracked_expr
 116       |

 117  compound_expr : expr COMMA expr
 118                | compound_expr COMMA expr

 119  bracked_expr : L_SQ_BRACKET expr R_SQ_BRACKET

 120  unop : PLUS
 121       | MINUS
 122       | ASTERISK
 123       | AMPERSAND
 124       | NOT
 125       | COMPLEMENT

 126  binop : MINUS
 127        | PLUS
 128        | ASTERISK
 129        | SLASH
 130        | GT
 131        | GE
 132        | EQ
 133        | NE
 134        | LE
 135        | LT
 136        | OR
 137        | AND
 138        | L_SHIFT
 139        | R_SHIFT
 140        | BIT_OR
 141        | BIT_XOR
 142        | BIT_AND
 143        | MODULO
 144        | QUESTION
 145        | COLON
 146        | PERIOD
 147        | POINTER

 148  asgnop : EQUAL
 149         | PLUS_EQUAL
 150         | MINUS_EQUAL
 151         | AND_EQUAL
 152         | OR_EQUAL
 153         | DIV_EQUAL
 154         | MULT_EQUAL
 155         | MODULO_EQUAL
 156         | LEFT_EQUAL
 157         | RIGHT_EQUAL
 158         | CMPL_EQUAL

 159  compound_stmt : L_BRACKET stmt_list R_BRACKET
 160                | error

 161  stmt_list : statement
 162            | stmt_list statement
 163            |

 164  statement : compound_stmt
 165            | expr SEMI_COLON
 166            | BREAK SEMI_COLON
 167            | if_stmt
 168            | else_stmt
 169            | while_stmt
 170            | for_stmt
 171            | C_STMT
 172            | pp_code

 173  if_stmt : IF L_PAREN expr R_PAREN statement

 174  else_stmt : ELSE statement

 175  while_stmt : WHILE L_PAREN expr R_PAREN statement

 176  for_stmt : FOR L_PAREN expr SEMI_COLON expr SEMI_COLON expr R_PAREN statement

 177  pp_code : PP_SYMBOL NUMBER STRING CR
 178          | PP_SYMBOL NUMBER CR
 179          | PP_SYMBOL NUMBER STRING NUMBER CR
 180          | PP_SYMBOL STRING CR

 181  pp_codes : pp_code
 182           | pp_codes pp_code

 183  global_c : escaped_c_list

 184  escaped_c_list : C_STMT
 185                 | escaped_c_list C_STMT

state 0
	$accept : . state_program $end  (0)

	error  shift 1
	PROGRAM  shift 2
	PP_SYMBOL  shift 3
	.  error

	state_program  goto 4
	program_name  goto 5
	pp_codes  goto 6
	pp_code  goto 7


state 1
	state_program : error .  (5)

	.  reduce 5


state 2
	program_name : PROGRAM . NAME  (6)
	program_name : PROGRAM . NAME L_PAREN STRING R_PAREN  (7)

	NAME  shift 8
	.  error


state 3
	pp_code : PP_SYMBOL . NUMBER STRING CR  (177)
	pp_code : PP_SYMBOL . NUMBER CR  (178)
	pp_code : PP_SYMBOL . NUMBER STRING NUMBER CR  (179)
	pp_code : PP_SYMBOL . STRING CR  (180)

	NUMBER  shift 9
	STRING  shift 10
	.  error


state 4
	$accept : state_program . $end  (0)

	$end  accept


state 5
	state_program : program_name . definitions state_set_list  (1)
	state_program : program_name . definitions state_set_list global_c  (2)

	error  shift 11
	DEBUG_PRINT  shift 12
	MONITOR  shift 13
	ASSIGN  shift 14
	UNSIGNED  shift 15
	CHAR  shift 16
	SHORT  shift 17
	INT  shift 18
	LONG  shift 19
	FLOAT  shift 20
	DOUBLE  shift 21
	STRING_DECL  shift 22
	EVFLAG  shift 23
	SYNC  shift 24
	SYNCQ  shift 25
	OPTION  shift 26
	C_STMT  shift 27
	PP_SYMBOL  shift 3
	.  error

	type  goto 28
	escaped_c_list  goto 29
	definitions  goto 30
	defn_stmt  goto 31
	assign_stmt  goto 32
	monitor_stmt  goto 33
	decl_stmt  goto 34
	debug_stmt  goto 35
	sync_stmt  goto 36
	syncq_stmt  goto 37
	option_stmt  goto 38
	defn_c_stmt  goto 39
	pp_code  goto 40


state 6
	state_program : pp_codes . program_name definitions state_set_list  (3)
	state_program : pp_codes . program_name definitions state_set_list global_c  (4)
	pp_codes : pp_codes . pp_code  (182)

	PROGRAM  shift 2
	PP_SYMBOL  shift 3
	.  error

	program_name  goto 41
	pp_code  goto 42


state 7
	pp_codes : pp_code .  (181)

	.  reduce 181


state 8
	program_name : PROGRAM NAME .  (6)
	program_name : PROGRAM NAME . L_PAREN STRING R_PAREN  (7)

	L_PAREN  shift 43
	error  reduce 6
	DEBUG_PRINT  reduce 6
	MONITOR  reduce 6
	ASSIGN  reduce 6
	UNSIGNED  reduce 6
	CHAR  reduce 6
	SHORT  reduce 6
	INT  reduce 6
	LONG  reduce 6
	FLOAT  reduce 6
	DOUBLE  reduce 6
	STRING_DECL  reduce 6
	EVFLAG  reduce 6
	SYNC  reduce 6
	SYNCQ  reduce 6
	OPTION  reduce 6
	C_STMT  reduce 6
	PP_SYMBOL  reduce 6


state 9
	pp_code : PP_SYMBOL NUMBER . STRING CR  (177)
	pp_code : PP_SYMBOL NUMBER . CR  (178)
	pp_code : PP_SYMBOL NUMBER . STRING NUMBER CR  (179)

	STRING  shift 44
	CR  shift 45
	.  error


state 10
	pp_code : PP_SYMBOL STRING . CR  (180)

	CR  shift 46
	.  error


state 11
	defn_stmt : error .  (19)
	type : error .  (51)

	error  reduce 19
	ENTRY  reduce 19
	STATE_SET  reduce 19
	NAME  reduce 51
	DEBUG_PRINT  reduce 19
	EXIT  reduce 19
	MONITOR  reduce 19
	ASSIGN  reduce 19
	UNSIGNED  reduce 19
	CHAR  reduce 19
	SHORT  reduce 19
	INT  reduce 19
	LONG  reduce 19
	FLOAT  reduce 19
	DOUBLE  reduce 19
	STRING_DECL  reduce 19
	EVFLAG  reduce 19
	SYNC  reduce 19
	SYNCQ  reduce 19
	ASTERISK  reduce 51
	OPTION  reduce 19
	C_STMT  reduce 19
	PP_SYMBOL  reduce 19


state 12
	debug_stmt : DEBUG_PRINT . NUMBER SEMI_COLON  (30)

	NUMBER  shift 47
	.  error


state 13
	monitor_stmt : MONITOR . NAME SEMI_COLON  (27)
	monitor_stmt : MONITOR . NAME subscript SEMI_COLON  (28)

	NAME  shift 48
	.  error


state 14
	assign_stmt : ASSIGN . NAME to STRING SEMI_COLON  (20)
	assign_stmt : ASSIGN . NAME subscript to STRING SEMI_COLON  (21)
	assign_stmt : ASSIGN . NAME to L_BRACKET assign_list R_BRACKET SEMI_COLON  (22)

	NAME  shift 49
	.  error


state 15
	type : UNSIGNED . CHAR  (43)
	type : UNSIGNED . SHORT  (44)
	type : UNSIGNED . INT  (45)
	type : UNSIGNED . LONG  (46)

	CHAR  shift 50
	SHORT  shift 51
	INT  shift 52
	LONG  shift 53
	.  error


state 16
	type : CHAR .  (39)

	.  reduce 39


state 17
	type : SHORT .  (40)

	.  reduce 40


state 18
	type : INT .  (41)

	.  reduce 41


state 19
	type : LONG .  (42)

	.  reduce 42


state 20
	type : FLOAT .  (47)

	.  reduce 47


state 21
	type : DOUBLE .  (48)

	.  reduce 48


state 22
	type : STRING_DECL .  (49)

	.  reduce 49


state 23
	type : EVFLAG .  (50)

	.  reduce 50


state 24
	sync_stmt : SYNC . NAME to NAME SEMI_COLON  (52)
	sync_stmt : SYNC . NAME subscript to NAME SEMI_COLON  (53)

	NAME  shift 54
	.  error


state 25
	syncq_stmt : SYNCQ . NAME to NAME SEMI_COLON  (54)
	syncq_stmt : SYNCQ . NAME subscript to NAME SEMI_COLON  (55)
	syncq_stmt : SYNCQ . NAME to NAME NUMBER SEMI_COLON  (56)
	syncq_stmt : SYNCQ . NAME subscript to NAME NUMBER SEMI_COLON  (57)

	NAME  shift 55
	.  error


state 26
	option_stmt : OPTION . PLUS NAME SEMI_COLON  (59)
	option_stmt : OPTION . MINUS NAME SEMI_COLON  (60)

	PLUS  shift 56
	MINUS  shift 57
	.  error


state 27
	escaped_c_list : C_STMT .  (184)

	.  reduce 184


state 28
	decl_stmt : type . NAME SEMI_COLON  (31)
	decl_stmt : type . NAME EQUAL NUMBER SEMI_COLON  (32)
	decl_stmt : type . NAME subscript SEMI_COLON  (33)
	decl_stmt : type . NAME subscript subscript SEMI_COLON  (34)
	decl_stmt : type . ASTERISK NAME SEMI_COLON  (35)
	decl_stmt : type . ASTERISK NAME subscript SEMI_COLON  (36)

	NAME  shift 58
	ASTERISK  shift 59
	.  error


29: shift/reduce conflict (shift 60, reduce 58) on C_STMT
state 29
	defn_c_stmt : escaped_c_list .  (58)
	escaped_c_list : escaped_c_list . C_STMT  (185)

	C_STMT  shift 60
	error  reduce 58
	ENTRY  reduce 58
	STATE_SET  reduce 58
	DEBUG_PRINT  reduce 58
	EXIT  reduce 58
	MONITOR  reduce 58
	ASSIGN  reduce 58
	UNSIGNED  reduce 58
	CHAR  reduce 58
	SHORT  reduce 58
	INT  reduce 58
	LONG  reduce 58
	FLOAT  reduce 58
	DOUBLE  reduce 58
	STRING_DECL  reduce 58
	EVFLAG  reduce 58
	SYNC  reduce 58
	SYNCQ  reduce 58
	OPTION  reduce 58
	PP_SYMBOL  reduce 58


state 30
	state_program : program_name definitions . state_set_list  (1)
	state_program : program_name definitions . state_set_list global_c  (2)
	definitions : definitions . defn_stmt  (9)

	error  shift 61
	ENTRY  shift 62
	STATE_SET  shift 63
	DEBUG_PRINT  shift 12
	EXIT  shift 64
	MONITOR  shift 13
	ASSIGN  shift 14
	UNSIGNED  shift 15
	CHAR  shift 16
	SHORT  shift 17
	INT  shift 18
	LONG  shift 19
	FLOAT  shift 20
	DOUBLE  shift 21
	STRING_DECL  shift 22
	EVFLAG  shift 23
	SYNC  shift 24
	SYNCQ  shift 25
	OPTION  shift 26
	C_STMT  shift 27
	PP_SYMBOL  shift 3
	.  error

	type  goto 28
	state_set_list  goto 65
	state_set  goto 66
	escaped_c_list  goto 29
	defn_stmt  goto 67
	assign_stmt  goto 32
	monitor_stmt  goto 33
	decl_stmt  goto 34
	debug_stmt  goto 35
	sync_stmt  goto 36
	syncq_stmt  goto 37
	option_stmt  goto 38
	defn_c_stmt  goto 39
	pp_code  goto 68


state 31
	definitions : defn_stmt .  (8)

	.  reduce 8


state 32
	defn_stmt : assign_stmt .  (10)

	.  reduce 10


state 33
	defn_stmt : monitor_stmt .  (11)

	.  reduce 11


state 34
	defn_stmt : decl_stmt .  (12)

	.  reduce 12


state 35
	defn_stmt : debug_stmt .  (13)

	.  reduce 13


state 36
	defn_stmt : sync_stmt .  (14)

	.  reduce 14


state 37
	defn_stmt : syncq_stmt .  (15)

	.  reduce 15


state 38
	defn_stmt : option_stmt .  (16)

	.  reduce 16


state 39
	defn_stmt : defn_c_stmt .  (17)

	.  reduce 17


state 40
	defn_stmt : pp_code .  (18)

	.  reduce 18


state 41
	state_program : pp_codes program_name . definitions state_set_list  (3)
	state_program : pp_codes program_name . definitions state_set_list global_c  (4)

	error  shift 11
	DEBUG_PRINT  shift 12
	MONITOR  shift 13
	ASSIGN  shift 14
	UNSIGNED  shift 15
	CHAR  shift 16
	SHORT  shift 17
	INT  shift 18
	LONG  shift 19
	FLOAT  shift 20
	DOUBLE  shift 21
	STRING_DECL  shift 22
	EVFLAG  shift 23
	SYNC  shift 24
	SYNCQ  shift 25
	OPTION  shift 26
	C_STMT  shift 27
	PP_SYMBOL  shift 3
	.  error

	type  goto 28
	escaped_c_list  goto 29
	definitions  goto 69
	defn_stmt  goto 31
	assign_stmt  goto 32
	monitor_stmt  goto 33
	decl_stmt  goto 34
	debug_stmt  goto 35
	sync_stmt  goto 36
	syncq_stmt  goto 37
	option_stmt  goto 38
	defn_c_stmt  goto 39
	pp_code  goto 40


state 42
	pp_codes : pp_codes pp_code .  (182)

	.  reduce 182


state 43
	program_name : PROGRAM NAME L_PAREN . STRING R_PAREN  (7)

	STRING  shift 70
	.  error


state 44
	pp_code : PP_SYMBOL NUMBER STRING . CR  (177)
	pp_code : PP_SYMBOL NUMBER STRING . NUMBER CR  (179)

	NUMBER  shift 71
	CR  shift 72
	.  error


state 45
	pp_code : PP_SYMBOL NUMBER CR .  (178)

	.  reduce 178


state 46
	pp_code : PP_SYMBOL STRING CR .  (180)

	.  reduce 180


state 47
	debug_stmt : DEBUG_PRINT NUMBER . SEMI_COLON  (30)

	SEMI_COLON  shift 73
	.  error


state 48
	monitor_stmt : MONITOR NAME . SEMI_COLON  (27)
	monitor_stmt : MONITOR NAME . subscript SEMI_COLON  (28)

	L_SQ_BRACKET  shift 74
	SEMI_COLON  shift 75
	.  error

	subscript  goto 76


state 49
	assign_stmt : ASSIGN NAME . to STRING SEMI_COLON  (20)
	assign_stmt : ASSIGN NAME . subscript to STRING SEMI_COLON  (21)
	assign_stmt : ASSIGN NAME . to L_BRACKET assign_list R_BRACKET SEMI_COLON  (22)
	to : .  (25)

	L_SQ_BRACKET  shift 74
	TO  shift 77
	L_BRACKET  reduce 25
	STRING  reduce 25

	subscript  goto 78
	to  goto 79


state 50
	type : UNSIGNED CHAR .  (43)

	.  reduce 43


state 51
	type : UNSIGNED SHORT .  (44)

	.  reduce 44


state 52
	type : UNSIGNED INT .  (45)

	.  reduce 45


state 53
	type : UNSIGNED LONG .  (46)

	.  reduce 46


state 54
	sync_stmt : SYNC NAME . to NAME SEMI_COLON  (52)
	sync_stmt : SYNC NAME . subscript to NAME SEMI_COLON  (53)
	to : .  (25)

	L_SQ_BRACKET  shift 74
	TO  shift 77
	NAME  reduce 25

	subscript  goto 80
	to  goto 81


state 55
	syncq_stmt : SYNCQ NAME . to NAME SEMI_COLON  (54)
	syncq_stmt : SYNCQ NAME . subscript to NAME SEMI_COLON  (55)
	syncq_stmt : SYNCQ NAME . to NAME NUMBER SEMI_COLON  (56)
	syncq_stmt : SYNCQ NAME . subscript to NAME NUMBER SEMI_COLON  (57)
	to : .  (25)

	L_SQ_BRACKET  shift 74
	TO  shift 77
	NAME  reduce 25

	subscript  goto 82
	to  goto 83


state 56
	option_stmt : OPTION PLUS . NAME SEMI_COLON  (59)

	NAME  shift 84
	.  error


state 57
	option_stmt : OPTION MINUS . NAME SEMI_COLON  (60)

	NAME  shift 85
	.  error


state 58
	decl_stmt : type NAME . SEMI_COLON  (31)
	decl_stmt : type NAME . EQUAL NUMBER SEMI_COLON  (32)
	decl_stmt : type NAME . subscript SEMI_COLON  (33)
	decl_stmt : type NAME . subscript subscript SEMI_COLON  (34)

	L_SQ_BRACKET  shift 74
	SEMI_COLON  shift 86
	EQUAL  shift 87
	.  error

	subscript  goto 88


state 59
	decl_stmt : type ASTERISK . NAME SEMI_COLON  (35)
	decl_stmt : type ASTERISK . NAME subscript SEMI_COLON  (36)

	NAME  shift 89
	.  error


state 60
	escaped_c_list : escaped_c_list C_STMT .  (185)

	.  reduce 185


61: reduce/reduce conflict (reduce 19, reduce 67) on error
61: reduce/reduce conflict (reduce 19, reduce 67) on ENTRY
61: reduce/reduce conflict (reduce 19, reduce 67) on STATE_SET
61: reduce/reduce conflict (reduce 19, reduce 67) on EXIT
61: reduce/reduce conflict (reduce 19, reduce 67) on C_STMT
61: reduce/reduce conflict (reduce 19, reduce 67) on PP_SYMBOL
state 61
	defn_stmt : error .  (19)
	type : error .  (51)
	state_set : error .  (67)

	$end  reduce 67
	error  reduce 19
	ENTRY  reduce 19
	STATE_SET  reduce 19
	NAME  reduce 51
	DEBUG_PRINT  reduce 19
	EXIT  reduce 19
	MONITOR  reduce 19
	ASSIGN  reduce 19
	UNSIGNED  reduce 19
	CHAR  reduce 19
	SHORT  reduce 19
	INT  reduce 19
	LONG  reduce 19
	FLOAT  reduce 19
	DOUBLE  reduce 19
	STRING_DECL  reduce 19
	EVFLAG  reduce 19
	SYNC  reduce 19
	SYNCQ  reduce 19
	ASTERISK  reduce 51
	OPTION  reduce 19
	C_STMT  reduce 19
	PP_SYMBOL  reduce 19


state 62
	state_set : ENTRY . L_BRACKET stmt_list R_BRACKET  (64)

	L_BRACKET  shift 90
	.  error


state 63
	state_set : STATE_SET . NAME L_BRACKET state_list R_BRACKET  (63)

	NAME  shift 91
	.  error


state 64
	state_set : EXIT . L_BRACKET stmt_list R_BRACKET  (65)

	L_BRACKET  shift 92
	.  error


state 65
	state_program : program_name definitions state_set_list .  (1)
	state_program : program_name definitions state_set_list . global_c  (2)
	state_set_list : state_set_list . state_set  (62)

	error  shift 93
	ENTRY  shift 62
	STATE_SET  shift 63
	EXIT  shift 64
	C_STMT  shift 27
	PP_SYMBOL  shift 3
	$end  reduce 1

	state_set  goto 94
	escaped_c_list  goto 95
	global_c  goto 96
	pp_code  goto 97


state 66
	state_set_list : state_set .  (61)

	.  reduce 61


state 67
	definitions : definitions defn_stmt .  (9)

	.  reduce 9


68: reduce/reduce conflict (reduce 18, reduce 66) on error
68: reduce/reduce conflict (reduce 18, reduce 66) on ENTRY
68: reduce/reduce conflict (reduce 18, reduce 66) on STATE_SET
68: reduce/reduce conflict (reduce 18, reduce 66) on EXIT
68: reduce/reduce conflict (reduce 18, reduce 66) on C_STMT
68: reduce/reduce conflict (reduce 18, reduce 66) on PP_SYMBOL
state 68
	defn_stmt : pp_code .  (18)
	state_set : pp_code .  (66)

	$end  reduce 66
	error  reduce 18
	ENTRY  reduce 18
	STATE_SET  reduce 18
	DEBUG_PRINT  reduce 18
	EXIT  reduce 18
	MONITOR  reduce 18
	ASSIGN  reduce 18
	UNSIGNED  reduce 18
	CHAR  reduce 18
	SHORT  reduce 18
	INT  reduce 18
	LONG  reduce 18
	FLOAT  reduce 18
	DOUBLE  reduce 18
	STRING_DECL  reduce 18
	EVFLAG  reduce 18
	SYNC  reduce 18
	SYNCQ  reduce 18
	OPTION  reduce 18
	C_STMT  reduce 18
	PP_SYMBOL  reduce 18


state 69
	state_program : pp_codes program_name definitions . state_set_list  (3)
	state_program : pp_codes program_name definitions . state_set_list global_c  (4)
	definitions : definitions . defn_stmt  (9)

	error  shift 61
	ENTRY  shift 62
	STATE_SET  shift 63
	DEBUG_PRINT  shift 12
	EXIT  shift 64
	MONITOR  shift 13
	ASSIGN  shift 14
	UNSIGNED  shift 15
	CHAR  shift 16
	SHORT  shift 17
	INT  shift 18
	LONG  shift 19
	FLOAT  shift 20
	DOUBLE  shift 21
	STRING_DECL  shift 22
	EVFLAG  shift 23
	SYNC  shift 24
	SYNCQ  shift 25
	OPTION  shift 26
	C_STMT  shift 27
	PP_SYMBOL  shift 3
	.  error

	type  goto 28
	state_set_list  goto 98
	state_set  goto 66
	escaped_c_list  goto 29
	defn_stmt  goto 67
	assign_stmt  goto 32
	monitor_stmt  goto 33
	decl_stmt  goto 34
	debug_stmt  goto 35
	sync_stmt  goto 36
	syncq_stmt  goto 37
	option_stmt  goto 38
	defn_c_stmt  goto 39
	pp_code  goto 68


state 70
	program_name : PROGRAM NAME L_PAREN STRING . R_PAREN  (7)

	R_PAREN  shift 99
	.  error


state 71
	pp_code : PP_SYMBOL NUMBER STRING NUMBER . CR  (179)

	CR  shift 100
	.  error


state 72
	pp_code : PP_SYMBOL NUMBER STRING CR .  (177)

	.  reduce 177


state 73
	debug_stmt : DEBUG_PRINT NUMBER SEMI_COLON .  (30)

	.  reduce 30


state 74
	subscript : L_SQ_BRACKET . NUMBER R_SQ_BRACKET  (29)

	NUMBER  shift 101
	.  error


state 75
	monitor_stmt : MONITOR NAME SEMI_COLON .  (27)

	.  reduce 27


state 76
	monitor_stmt : MONITOR NAME subscript . SEMI_COLON  (28)

	SEMI_COLON  shift 102
	.  error


state 77
	to : TO .  (26)

	.  reduce 26


state 78
	assign_stmt : ASSIGN NAME subscript . to STRING SEMI_COLON  (21)
	to : .  (25)

	TO  shift 77
	STRING  reduce 25

	to  goto 103


state 79
	assign_stmt : ASSIGN NAME to . STRING SEMI_COLON  (20)
	assign_stmt : ASSIGN NAME to . L_BRACKET assign_list R_BRACKET SEMI_COLON  (22)

	L_BRACKET  shift 104
	STRING  shift 105
	.  error


state 80
	sync_stmt : SYNC NAME subscript . to NAME SEMI_COLON  (53)
	to : .  (25)

	TO  shift 77
	NAME  reduce 25

	to  goto 106


state 81
	sync_stmt : SYNC NAME to . NAME SEMI_COLON  (52)

	NAME  shift 107
	.  error


state 82
	syncq_stmt : SYNCQ NAME subscript . to NAME SEMI_COLON  (55)
	syncq_stmt : SYNCQ NAME subscript . to NAME NUMBER SEMI_COLON  (57)
	to : .  (25)

	TO  shift 77
	NAME  reduce 25

	to  goto 108


state 83
	syncq_stmt : SYNCQ NAME to . NAME SEMI_COLON  (54)
	syncq_stmt : SYNCQ NAME to . NAME NUMBER SEMI_COLON  (56)

	NAME  shift 109
	.  error


state 84
	option_stmt : OPTION PLUS NAME . SEMI_COLON  (59)

	SEMI_COLON  shift 110
	.  error


state 85
	option_stmt : OPTION MINUS NAME . SEMI_COLON  (60)

	SEMI_COLON  shift 111
	.  error


state 86
	decl_stmt : type NAME SEMI_COLON .  (31)

	.  reduce 31


state 87
	decl_stmt : type NAME EQUAL . NUMBER SEMI_COLON  (32)

	NUMBER  shift 112
	.  error


state 88
	decl_stmt : type NAME subscript . SEMI_COLON  (33)
	decl_stmt : type NAME subscript . subscript SEMI_COLON  (34)

	L_SQ_BRACKET  shift 74
	SEMI_COLON  shift 113
	.  error

	subscript  goto 114


state 89
	decl_stmt : type ASTERISK NAME . SEMI_COLON  (35)
	decl_stmt : type ASTERISK NAME . subscript SEMI_COLON  (36)

	L_SQ_BRACKET  shift 74
	SEMI_COLON  shift 115
	.  error

	subscript  goto 116

